// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-0 iylbCl"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Left
        </h6>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-0 hODMTq"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Center
        </h6>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-0 ikxUaE"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Right
        </h6>
      </div>
    </div>
  </div>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-0 iylbCl"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Left
        </h6>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-0 hODMTq"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Towgood, Gary T.
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          3082 Yellowstone Dr. Costa Mesa, CA 92612
        </p>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-0 ikxUaE"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Right
        </h6>
      </div>
    </div>
  </div>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc Card__CardGridWrapper-sc-1g3s676-6 dqRWfz"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 hODMTq"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            A Standard Title
          </h6>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 ikxUaE"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 kUBMJI"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 hODMTq"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            A Title So Long That It May Take Up Multiple Lines
          </h6>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 ikxUaE"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 kUBMJI"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 hFmokc"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 hODMTq"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Towgood, Gary T.
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            letterSpacing="0px"
          >
            3082 Yellowstone Dr. Costa Mesa, CA 92612
          </p>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 ikxUaE"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 hFmokc"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
      </div>
    </div>
    //         
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      //           
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            A Standard Title
          </h6>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 ikxUaE"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
      </div>
      //         
    </div>
    //         
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      //           
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 cSnMzs"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            A Title So Long That It May Take Up Multiple Lines
          </h6>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 ikxUaE"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
      </div>
      //         
    </div>
    //         
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      //           
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 cSnMzs"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Towgood, Gary T.
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            letterSpacing="0px"
          >
            3082 Yellowstone Dr. Costa Mesa, CA 92612
          </p>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 ikxUaE"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
      </div>
      //         
    </div>
    //         
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      //           
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            A Standard Title
          </h6>
        </div>
      </div>
      //         
    </div>
    //         
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      //           
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            A Title So Long That It May Take Up Multiple Lines
          </h6>
        </div>
      </div>
      //         
    </div>
    //         
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      //           
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Towgood, Gary T.
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            letterSpacing="0px"
          >
            3082 Yellowstone Dr. Costa Mesa, CA 92612
          </p>
        </div>
      </div>
      //         
    </div>
    //         
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      //           
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
      </div>
      //         
    </div>
    //         
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      //           
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 dirCQm"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
      </div>
      //         
    </div>
    //         
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      //           
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fhfXWG"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 ikxUaE"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
      </div>
      //         
    </div>
    //         
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      //           
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 ikxUaE"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
      </div>
      //         
    </div>
    //         
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      //           
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 hODMTq"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 ikxUaE"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
            id={null}
            label="Command"
            onClick={null}
            title="Command"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 Jgtkr Command__CommandName-sc-13akgtp-1 kXfRER"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor={null}
              letterSpacing="0px"
            >
              Command
            </label>
          </a>
        </div>
      </div>
      //         
    </div>
    //         
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      //           
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
            color={null}
            data-icon="circle"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 hODMTq"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
            color={null}
            data-icon="circle"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 ikxUaE"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
            color={null}
            data-icon="circle"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <div
            className="IconBlock__Block-nokc92-0 cBGvyz"
            id={null}
            style={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 egNihH"
              color="info80"
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 OvdFF"
              color="success80"
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <div
            className="IconBlock__Block-nokc92-0 cBGvyz"
            id={null}
            style={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 egNihH"
              color="info80"
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 OvdFF"
              color="success80"
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 hODMTq"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            A Title So Long That It May Take Up Multiple Lines
          </h6>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 ikxUaE"
        >
          <div
            className="IconBlock__Block-nokc92-0 cBGvyz"
            id={null}
            style={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 egNihH"
              color="info80"
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 OvdFF"
              color="success80"
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            A Standard Title
          </h6>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 ikxUaE"
        >
          <div
            className="IconBlock__Block-nokc92-0 cBGvyz"
            id={null}
            style={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 egNihH"
              color="info80"
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 OvdFF"
              color="success80"
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <div
            className="IconBlock__Block-nokc92-0 cBGvyz"
            id={null}
            style={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 egNihH"
              color="info80"
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 OvdFF"
              color="success80"
              data-icon="circle"
              data-prefix="fas"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 ikxUaE"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            A Standard Title
          </h6>
        </div>
      </div>
    </div>
  </section>
</div>
`;
